# Functions

./: CMakeLists.txt  CompositionImpl.h  Function.cpp  Function.h  FunctionImpl.cpp  FunctionImpl.h  Functions.cpp  Functions.h  Polynomial.cpp  Polynomial.h  PolynomialImpl.cpp  PolynomialImpl.h  ProductImpl.h  SqrtPlusOneImpl.cpp  SqrtPlusOneImpl.h  SumImpl.h  consts.h  main.cpp
